28: Fix/fixing Article component overflow in ArticlesTab

--- a/components/Article/Article.module.css
+++ b/components/Article/Article.module.css
@@ -1,7 +1,3 @@
-.article {
-    width: 100%;
-}
-
 .title {
     margin: 0;
     font-size: 1.6rem;
